a bunch of stuff

--- a/hyperspace/html_templates/bountycard.html
+++ b/hyperspace/html_templates/bountycard.html
@@ -47,6 +47,7 @@
       </div>
 
       <div class="col-md-4">
+        <h3 class="my-3">State: {bounty_state}</h3>
         <h3 class="my-3">Reward: {bounty_reward}</h3>
         <h3 class="my-3">Description</h3>
         <!-- Add better formatting. Expect Markdown? -->
