--- a/static/navbar.html
+++ b/static/navbar.html
@@ -1,11 +1,20 @@
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="/index.html" target="_top">MakUrSpace</a>
+    <a class="navbar-brand" href="https://makurspace.myshopify.com" target="_top">MakUrSpace</a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="https://makurspace.myshopify.com" target="_top">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://makurspace.myshopify.com/collections/all" target="_top">Catalog</a>
+        </li>
+	<li>
+	  <a>__</a>
+	</li>
         <li class="nav-item">
           <a class="nav-link" href="/bounty.html" target="_top">Submit a Bounty</a>
         </li>
