--- a/hyperspace/html_templates/bountycard_stl.html
+++ b/hyperspace/html_templates/bountycard_stl.html
@@ -10,8 +10,6 @@
   <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="/css/modern-business.css" rel="stylesheet">
   <link href="/css/makurspace.css" rel="stylesheet">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/aframe/1.2.0/aframe.min.js" integrity="sha512-/gO16YMp20RIqCZXZyvMlzALQqEoiDU0akshw25wFiXCRGl+0p/HPWkOd8HWFn6bnatGhxakGLfYhWaPPVQIyA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>'
-  <script src="/aframe-stl-model.js"></script>
 </head>
 
 <body>
@@ -26,26 +24,7 @@
 
     <div class="row" style="margin-bottom: 30px">
       <div class="col-md-8">
-        <img class="img-fluid" src="{primary_image}" alt="{bounty_name} reference image">
-        <div class="container">
-          <div class="carousel slide" data-ride="carousel" id="multi_item">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <div class="row">
-                  {secondary_images}
-                </div>
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#multi_item" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#multi_item" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
-        </div>
+	      <iframe style="width: 100%; height: 100%" srcdoc='<!DOCTYPE html><html><head><meta charset="utf-8"><script src="https://cdnjs.cloudflare.com/ajax/libs/aframe/1.2.0/aframe.min.js" integrity="sha512-/gO16YMp20RIqCZXZyvMlzALQqEoiDU0akshw25wFiXCRGl+0p/HPWkOd8HWFn6bnatGhxakGLfYhWaPPVQIyA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script><script src="/aframe-stl-model.js"></script></head><body><a-scene><a-assets><a-asset-item response-type="arraybuffer" id="house" src="{primary_stl}"></a-asset-item></a-assets><a-entity position="{model_position}" stl-model="src: #house" scale="0.1 0.1 0.1" material="color: #00d000; roughness: 1" </a-entity><a-sky color="#000000"></a-sky></body></html>'></iframe>
       </div>
 
       <div class="col-md-4">
