--- a/static/about.html
+++ b/static/about.html
@@ -57,6 +57,7 @@
           <div class="card-body">
             <h4 class="card-title">Luther Blackwood</h4>
             <h6 class="card-subtitle mb-2 text-muted">Director</h6>
+            <h6 class="card-subtitle mb-2 text-muted">lutherblackwood@makurspace.com</h6>
           </div>
         </div>
       </div>
@@ -65,6 +66,7 @@
           <div class="card-body">
             <h4 class="card-title">Brandon Hall</h4>
             <h6 class="card-subtitle mb-2 text-muted">Chief Operations Officer</h6>
+            <h6 class="card-subtitle mb-2 text-muted">brandonhall@makurspace.com</h6>
           </div>
         </div>
       </div>
