Finalize HyperObject system

--- a/hyperspace/html_templates/edit_bounty_form.html
+++ b/hyperspace/html_templates/edit_bounty_form.html
@@ -40,20 +40,20 @@
           <div class="control-group form-group">
             <div class="controls">
               <label>Bounty Reward:</label>
-              <input type="float" class="form-control change-monitored" id="Bounty" name="Bounty" required data-validation-required-message="Please enter a bounty reward amount." value={bounty_reward}>
+              <input type="float" class="form-control change-monitored" id="Award" name="Award" required data-validation-required-message="Please enter a bounty reward amount." value={bounty_reward}>
               <p class="help-block"></p>
             </div>
           </div>
           <div class="control-group form-group">
             <div class="controls">
               <label>Bounty Name:</label>
-              <input type="text" class="form-control change-monitored" id="BountyName" name="BountyName" required data-validation-required-message="Please enter a unique name for the bounty" value={bounty_name}>
+              <input type="text" class="form-control change-monitored" id="Name" name="Name" required data-validation-required-message="Please enter a unique name for the bounty" value={bounty_name}>
             </div>
           </div>
           <div class="control-group form-group">
             <div class="controls">
               <label>Bounty Description:</label>
-              <textarea rows="10" cols="100" class="form-control change-monitored" id="BountyDescription" name="BountyDescription" required data-validation-required-message="Please a description of the bounty" rows="5" maxlength="999" style="resize:none">{bounty_description}</textarea>
+              <textarea rows="10" cols="100" class="form-control change-monitored" id="Description" name="Description" required data-validation-required-message="Please a description of the bounty" rows="5" maxlength="999" style="resize:none">{bounty_description}</textarea>
             </div>
           </div>
           <div class="control-group form-group">
