--- a/hyperspace/html_templates/bounty_creation_email_template.html
+++ b/hyperspace/html_templates/bounty_creation_email_template.html
@@ -5,11 +5,11 @@
   <img src="https://www.makurspace.com/MakUrSpace_Logo.png" height="300"><br>
   You submitted this bounty:
   <h3>Bounty: {BountyReward}</h3>
-  <h3>Bounty Name: {BountyName}</h3>
+  <h3>Bounty Name: {Name}</h3>
   <h3>Benefactor: {Benefactor}</h3>
   <h3>Reference Material: {ReferenceMaterial}</h3>
   <h3>Bounty Description:</h3>
-  <p>{BountyDescription}</p>
+  <p>{Description}</p>
 
   <br><br>
 
