--- a/static/bountyboard.html
+++ b/static/bountyboard.html
@@ -19,14 +19,14 @@
   <div class="container" id="navbar"></div>
   <div class="container container-fluid vh-100" style="margin-top: 50px;margin-bottom: 60px">
     <h1 class="mt-2">MakUrSpace Bounty Board</h1>
-    <h2 class="container mt-2 text-center"><a href="/bounty.html">Post your own bounty!</h2>
+    <h2 class="container mt-2 text-center"><a href="/bounty.html">Post your own bounty!</a></h2>
     <div class="row mt-0 pt-0 vh-100 w-100" align="center" id="bountyboard"></div>
   </div>
 
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div id="container">
-      <p class="m-0 text-center text-white">Copyright &copy; MakUrSpace, LLC 2021</p>
+      <p class="m-0 text-center text-white">Copyright &copy; MakUrSpace, LLC 2022</p>
     </div>
   </footer>
 
