--- a/static/bounty_portfolio.html
+++ b/static/bounty_portfolio.html
@@ -12,13 +12,14 @@
   <link href="/css/makurspace.css" rel="stylesheet">
   <link rel="shortcut icon" href="MakUrSpace_Logo.png" type="image/x-icon">
 
-  <title>MakUrSpace Bounty Portfolio</title>
+  <title>MakUrSpace Community Portfolio</title>
 </head>
 
 <body>
   <div class="container" id="navbar"></div>
   <div class="container container-fluid vh-100" style="margin-top: 50px;margin-bottom: 60px">
-    <h1 class="mt-2">MakUrSpace Bounty Portfolio</h1>
+    <h1 class="mt-2">MakUrSpace Community Portfolio</h1>
+    <h2 class="container mt-2 text-center"><a href="/completed_bounty_form.html">Post a completed project!</a></h2>
     <div class="row mt-0 pt-0 vh-100 w-100" align="center" id="bountyboard"></div>
   </div>
 
