I have no earthly clue...

--- a/hyperspace/html_templates/bounty_submission_form.html
+++ b/hyperspace/html_templates/bounty_submission_form.html
@@ -87,6 +87,11 @@
           </div>
           <div class="control-group form-group">
             <div class="controls">
+              <input type="hidden" class="form-control" id="checkedRefMatNames" name="CheckedReferenceMaterialNames" value='[]'>
+            </div>
+          </div>
+          <div class="control-group form-group">
+            <div class="controls">
               <input type="hidden" class="form-control" id="BountyId" name="BountyId" value='foobar'>
             </div>
           </div>
