--- a/hyperspace/html_templates/edit_bounty_form.html
+++ b/hyperspace/html_templates/edit_bounty_form.html
@@ -69,6 +69,11 @@
           </div>
           <div class="control-group form-group">
             <div class="controls">
+              <input type="hidden" class="form-control change-monitored" id="checkedRefMatNames" name="CheckedReferenceMaterialNames" value='{reference_material}'>
+            </div>
+          </div>
+          <div class="control-group form-group">
+            <div class="controls">
               <input type="hidden" class="form-control" id="changed" name="changed" value='[]'>
             </div>
           </div>
