--- a/static/index.html
+++ b/static/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<meta http-equiv="Refresh" content="0; url='https://makurspace.myshopify.com/'" />
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -60,11 +61,11 @@
     </div>
 
     <h2 class="container mt-2">MakUrSpace Bounty Board</h2>
-    <h3 class="container mt-2 text-center"><a href="/bounty.html">Post your own bounty!</h3>
+    <h3 class="container mt-2 text-center"><a href="/bounty.html">Post your own bounty!</a></h3>
     <div class="row mt-0 pt-0 vh-100 w-100" align="center" id="bountyboard" style="margin-bottom: 60px"></div>
   </div>
 
-  <!-- Footer -->
+  </!-- Footer --/>
   <footer class="py-5 bg-dark">
     <div id="container">
       <p class="m-0 text-center text-white">Copyright &copy; MakUrSpace, LLC 2022</p>
@@ -99,3 +100,4 @@
 </body>
 
 </html>
+ -->
