--- a/static/completed_bounty_form.html
+++ b/static/completed_bounty_form.html
@@ -78,6 +78,11 @@
           </div>
           <div class="control-group form-group">
             <div class="controls">
+              <input type="hidden" class="form-control" id="checkedRefMatNames" name="CheckedReferenceMaterialNames" value='[]'>
+            </div>
+          </div>
+          <div class="control-group form-group">
+            <div class="controls">
               <input type="hidden" class="form-control" id="BountyId" name="BountyId" value='foobar'>
             </div>
           </div>
