--- a/hyperspace/html_templates/claim_bounty_template.html
+++ b/hyperspace/html_templates/claim_bounty_template.html
@@ -54,7 +54,8 @@
           </div>
           <div class="control-group form-group">
             <div class="controls">
-              A confirmation email will be sent to the maker's email attached to this project.
+              <label>Confirm the maker email attached to this project:</label>
+              <input type="text" class="form-control" id="MakerEmail" name="MakerEmail" required data-validation-required-message="Please enter an email address for further communication.">
             </div>
           </div>
           <div id="success"></div>
