--- a/hyperspace/html_templates/call_bounty_form.html
+++ b/hyperspace/html_templates/call_bounty_form.html
@@ -32,7 +32,7 @@
             <div class="controls">
               <label>Email Address:</label>
               <input type="text" class="form-control" id="maker_email" name="maker_email" required data-validation-required-message="Please enter an email address for further communication.">
-              <p class="help-block"></p>
+              <p class="help-block">Email address of register maker to contact for this project</p>
             </div>
           </div>
           <div id="success"></div>
