--- a/hyperspace/html_templates/up_submission_template.html
+++ b/hyperspace/html_templates/up_submission_template.html
@@ -58,7 +58,8 @@
           </div>
           <div class="control-group form-group">
             <div class="controls">
-              A confirmation email will be sent to the maker's email attached to this project.
+              <label>Confirm the maker email attached to this project:</label>
+              <input type="text" class="form-control" id="maker_email" name="maker_email" required data-validation-required-message="Please enter an email address for further communication.">
             </div>
           </div>
           <div id="success"></div>
