Updated about page with links to social media channels

--- a/static/about.html
+++ b/static/about.html
@@ -35,6 +35,10 @@
       	<p>We help people make stuff.</p>
         <h3 class="mt-4 mb-3">What is this website?</h3>
         <p>The MakUrSpace Bounty Board is a bridge to connect consumers to makers. Consumers post a request -- a bounty, and capable makers can work to claim that bounty -- and its reward.</p>
+        <h3 class="mt-4 mb-3">Our Social Media</h3>
+        <p><a href="https://www.reddit.com/r/makurspace/">Reddit</a></p>
+        <p><a href="https://www.instagram.com/makurspacellc/">Instagram</a></p>
+        <p><a href="https://twitter.com/makurspace">Twitter</a></p>
       </div>
     </div>
     <!-- /.row -->
