--- a/static/navbar.html
+++ b/static/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container">
-    <img src="MakUrSpace_Logo.png" alt="MakUrSpace Logo" style="width:50px;height:50px;">
+    <img src="/MakUrSpace_Logo.png" alt="MakUrSpace Logo" style="width:50px;height:50px;">
     <a class="navbar-brand" href="https://makurspace.myshopify.com" target="_top">MakUrSpace</a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
