--- a/static/about.html
+++ b/static/about.html
@@ -20,7 +20,7 @@
   <div class="container" id="navbar"></div>
 
   <!-- Page Content -->
-  <div class="container" style="margin-top: 50px">
+  <div class="container" style="margin-top: 60px">
 
     <!-- Page Heading/Breadcrumbs -->
     <h1 class="mt-4 mb-3">What is MakUrSpace?</h1>
@@ -31,7 +31,7 @@
         <img class="img-fluid rounded mb-4" src="/MakUrSpace_Logo.png" alt="MakUrSpace Logo">
       </div>
       <div class="col-lg-6">
-      	<p>MakUrSpace delivers access to technology and education that would otherwise be out of reach. Our services and products first provide access to creative resources and second encourage the utilization of those resources through a requested goods platform.</p>
+      	<p>MakUrSpace delivers access to personal fabrication technologies -- such as 3D printing, machining, or electroplating -- and education in their use and craft.</p>
       	<p>We help people make stuff.</p>
         <h3 class="mt-4 mb-3">What is this website?</h3>
         <p>The MakUrSpace Bounty Board is a bridge to connect consumers to makers. Consumers post a request -- a bounty, and capable makers can work to claim that bounty -- and its reward.</p>
