--- a/hyperspace/html_templates/bounty_refmat.html
+++ b/hyperspace/html_templates/bounty_refmat.html
@@ -30,14 +30,7 @@
       </div>
 
       <div class="col-md-4">
-        <h3 class="my-3">State: {bounty_state}</h3>
-        <h3 class="my-3">Reward: {bounty_reward}</h3>
-        <h3 class="my-3">Description</h3>
-        <!-- Add better formatting. Expect Markdown? -->
-        <p>{bounty_description}</p>
-        <div class="container">
-          {interactions}
-        </div>
+        {refmat_links}
       </div>
 
       {secondary_image_carousel}
