due date; final image collection on bounty claim

--- a/hyperspace/html_templates/call_bounty_email.html
+++ b/hyperspace/html_templates/call_bounty_email.html
@@ -5,8 +5,9 @@
   <img src="https://www.makurspace.com/MakUrSpace_Logo.png" height="300"><br>
   You ({maker_name} @@ {maker_email}) are agreeing to complete this bounty:
   <h3>Bounty: {bounty_reward}</h3>
-  <h3>Bounty Name: {bounty_name}</h3>
-  <h3>Bounty Description:</h3>
+  <h3>Name: {bounty_name}</h3>
+  <h3>Due Date: {bounty_due_date}</h3>
+  <h3>Description:</h3>
   <p>{bounty_description}</p>
 
   <br><br>
