--- a/static/bounty.html
+++ b/static/bounty.html
@@ -89,6 +89,15 @@
               <input type="email" class="form-control" id="Contact" name="Contact" required data-validation-required-message="Please enter an email address for the recipient of the bounty">
             </div>
           </div>
+          <div class="control-group form-group input-group">
+            <div class="controls">
+              <label>Bounty Date:</label>
+              <small id="bountyDueDate" class="form-text text-muted">
+                Optionally provide a due date for the bounty
+              </small>
+              <input type="date" class="form-control" id="DueDate" name="DueDate" data-validation-required-message="Optionally enter a due date for the bounty." value=35>
+            </div>
+          </div>
           <div class="control-group form-group">
             <div class="controls">
               <label>Bounty Description:</label>
@@ -123,7 +132,7 @@
 
   <footer class="py-5 bg-dark">
     <div id="container">
-      <p class="m-0 text-center text-white">Copyright &copy; MakUrSpace, LLC 2022</p>
+      <p class="m-0 text-center text-white">Copyright &copy; MakUrSpace, LLC 2023</p>
     </div>
   </footer>
 
