--- a/hyperspace/html_templates/bounty_editor_email_template.html
+++ b/hyperspace/html_templates/bounty_editor_email_template.html
@@ -9,6 +9,7 @@
   <h3>Bounty: {BountyReward}</h3>
   <h3>Bounty Name: {BountyName}</h3>
   <h3>Benefactor: {Benefactor}</h3>
+  <h3>Due Date: {DueDate}</h3>
   <h3>Reference Material: {ReferenceMaterial}</h3>
   <h3>Bounty Description:</h3>
   <p>{BountyDescription}</p>
