--- a/hyperspace/html_templates/bountycard.html
+++ b/hyperspace/html_templates/bountycard.html
@@ -32,6 +32,7 @@
       <div class="col-md-4">
         <h3 class="my-3">State: {bounty_state}</h3>
         <h3 class="my-3">Reward: {bounty_reward}</h3>
+        <h3 class="my-3">Due Date: {bounty_due_date}
         <h3 class="my-3">Description</h3>
         <!-- Add better formatting. Expect Markdown? -->
         <p>{bounty_description}</p>
@@ -56,7 +57,7 @@
   </div>
 
   <footer class="py-5 bg-dark">
-      <div class="container"><p class="m-0 text-center text-white">Copyright © MakUrSpace, LLC 2022</p></div>
+      <div class="container"><p class="m-0 text-center text-white">Copyright © MakUrSpace, LLC 2023</p></div>
   </footer>
 
   <script src="/vendor/jquery/jquery.min.js"></script>
