--- a/hyperspace/html_templates/claim_bounty_template.html
+++ b/hyperspace/html_templates/claim_bounty_template.html
@@ -58,6 +58,16 @@
               <input type="text" class="form-control" id="MakerEmail" name="MakerEmail" required data-validation-required-message="Please enter an email address for further communication.">
             </div>
           </div>
+          <div class="control-group form-group">
+            <div class="controls">
+              <input type="hidden" class="form-control change-monitored" id="refMatNames" name="ReferenceMaterialNames" value='{reference_material}'>
+            </div>
+          </div>
+          <div class="control-group form-group">
+            <div class="controls">
+              <input type="hidden" class="form-control change-monitored" id="checkedRefMatNames" name="CheckedReferenceMaterialNames" value='{reference_material}'>
+            </div>
+          </div>
           <div id="success"></div>
           <!-- For success/fail messages -->
           <button type="submit" class="btn btn-primary" id="sendMessageButton">Claim Bounty</button>
@@ -70,15 +80,15 @@
 
   <footer class="py-5 bg-dark">
     <div id="container">
-      <p class="m-0 text-center text-white">Copyright &copy; MakUrSpace, LLC 2022</p>
+      <p class="m-0 text-center text-white">Copyright &copy; MakUrSpace, LLC 2023</p>
     </div>
   </footer>
 
+  <script src="/vendor/jquery/jquery.min.js"></script>
+  <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script>
     {upload_reference_material_js}
   </script>
-  <script src="/vendor/jquery/jquery.min.js"></script>
-  <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script>
     $(document).ready(function(){
       $.ajax({
