--- a/hyperspace/html_templates/edit_bounty_form.html
+++ b/hyperspace/html_templates/edit_bounty_form.html
@@ -50,6 +50,15 @@
               <input type="text" class="form-control change-monitored" id="Name" name="Name" required data-validation-required-message="Please enter a unique name for the bounty" value={bounty_name}>
             </div>
           </div>
+          <div class="control-group form-group input-group">
+            <div class="controls">
+              <label>Bounty Date:</label>
+              <small id="bountyDueDate" class="form-text text-muted">
+                Optionally provide a due date for the bounty
+              </small>
+              <input type="date" class="form-control" id="DueDate" name="DueDate" data-validation-required-message="Optionally enter a due date for the bounty." value=35>
+            </div>
+          </div>
           <div class="control-group form-group">
             <div class="controls">
               <label>Bounty Description:</label>
@@ -89,7 +98,7 @@
 
   <footer class="py-5 bg-dark">
     <div id="container">
-      <p class="m-0 text-center text-white">Copyright &copy; MakUrSpace, LLC 2022</p>
+      <p class="m-0 text-center text-white">Copyright &copy; MakUrSpace, LLC 2023</p>
     </div>
   </footer>
 
