due date and more

--- a/static/index.html
+++ b/static/index.html
@@ -1,103 +1,1 @@
-<meta http-equiv="Refresh" content="0; url='https://makurspace.myshopify.com/'" />
-<!-- <!DOCTYPE html>
-<html lang="en">
-
-<head>
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <title>MakUrSpace</title>
-
-  <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="/css/makurspace.css" rel="stylesheet">
-
-  <link rel="shortcut icon" href="MakUrSpace_Logo.png" type="image/x-icon">
-
-</head>
-
-<body>
-  <div class="container" id="navbar"></div>
-  <div class="container-fluid vh-100">
-    <div class="container-md">
-      <header>
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          </ol>
-          <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active" style="background-image: url('MakUrSpace_Logo.png')">
-              <div class="carousel-caption d-none d-md-block">
-                <h3>Welcome to MakUrSpace</h3>
-                <p>Create Your World</p>
-              </div>
-            </div>
-            <div class="carousel-item" style="background-image: url('1.jpg')">
-              <div class="carousel-caption d-none d-md-block">
-                <h3>Beholder Set</h3>
-                <p>It gets shot in the head, but rises again</p>
-              </div>
-            </div>
-            <div class="carousel-item" style="background-image: url('2.jpg')">
-              <div class="carousel-caption d-none d-md-block">
-                <h3>Young Silver Dragon</h3>
-              </div>
-            </div>
-          </div>
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
-      </header>
-    </div>
-
-    <h2 class="container mt-2">MakUrSpace Bounty Board</h2>
-    <h3 class="container mt-2 text-center"><a href="/bounty.html">Post your own bounty!</a></h3>
-    <div class="row mt-0 pt-0 vh-100 w-100" align="center" id="bountyboard" style="margin-bottom: 60px"></div>
-  </div>
-
-  </!-- Footer --/>
-  <footer class="py-5 bg-dark">
-    <div id="container">
-      <p class="m-0 text-center text-white">Copyright &copy; MakUrSpace, LLC 2023</p>
-    </div>
-  </footer>
-
-  <script src="/vendor/jquery/jquery.min.js"></script>
-  <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script>
-    $(document).ready(function(){
-      $.ajax({
-        url : `/rest/rendered_bountyboard`,
-        type : "GET"
-      }).done(function(response){
-        const container = document.createElement('div')
-        container.innerHTML = response
-        document.querySelector("#bountyboard").appendChild(container)
-      })
-    })
-  </script>
-  <script>
-    $(document).ready(function(){
-      $.ajax({
-        url : `/navbar.html`,
-        type : "GET"
-      }).done(function(response){
-        const container = document.querySelector("#navbar")
-        container.innerHTML = response
-      })
-    })
-  </script>
-</body>
-
-</html>
- -->
+<meta http-equiv="Refresh" content="0; url='https://www.bountyboard.makurspace.com/about.html'" />
