--- a/static/navbar.html
+++ b/static/navbar.html
@@ -8,10 +8,10 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="https://makurspace.myshopify.com" target="_top">Home</a>
+          <a class="nav-link" href="https://makurspace.com/about.html" target="_top">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://makurspace.myshopify.com/collections/all" target="_top">Catalog</a>
+          <a class="nav-link" href="https://ko-fi.com/makurspace/shop" target="_top">Shop</a>
         </li>
 	<li>
 	  <a>__</a>
