Migrate bountyboard to bountyboard.makurspace.com and disable ip filter

--- a/hyperspace/html_templates/ask_benefactor_email.html
+++ b/hyperspace/html_templates/ask_benefactor_email.html
@@ -2,7 +2,7 @@
   <title>MakUrSpace: a question for you!</title>
 </head>
 <body>
-  <img src="https://www.makurspace.com/MakUrSpace_Logo.png" height="300"><br>
+  <img src="https://www.bountyboard.makurspace.com/MakUrSpace_Logo.png" height="300"><br>
   {questioner} wanted to ask you something in regards to "{bounty_name}":
 
   <h3>{question_title}</h3>
@@ -10,5 +10,5 @@
 
   <br><br>
 
-  <h2>To answer this question <a href="https://www.makurspace.com/rest/question/{question_id}">please click here</a></h2>
+  <h2>To answer this question <a href="https://www.bountyboard.makurspace.com/rest/question/{question_id}">please click here</a></h2>
 </body>
