--- a/hyperspace/html_templates/bounty_editor_email_template.html
+++ b/hyperspace/html_templates/bounty_editor_email_template.html
@@ -2,7 +2,7 @@
   <title>MakUrSpace Bounty Submission</title>
 </head>
 <body>
-  <img src="https://www.makurspace.com/MakUrSpace_Logo.png" height="300"><br>
+  <img src="https://www.bountyboard.makurspace.com/MakUrSpace_Logo.png" height="300"><br>
   
 
   You suggested the {OldBountyName} project be updated to:
@@ -15,5 +15,5 @@
   <p>{BountyDescription}</p>
 
   <br><br>
-  <h2>To suggest these edits, <a href="https://www.makurspace.com/rest/submit_bounty_edits/{bounty_edit_id}?{token}">please click here</a></h2>
+  <h2>To suggest these edits, <a href="https://www.bountyboard.makurspace.com/rest/submit_bounty_edits/{bounty_edit_id}?{token}">please click here</a></h2>
 </body>
