--- a/hyperspace/html_templates/bountyboard_card.html
+++ b/hyperspace/html_templates/bountyboard_card.html
@@ -1,4 +1,4 @@
-<div class="card col-lg-3 col-md-4 col-sm-6 bounty-item mx-1 mb-2" onclick="location.href='/rest/rendered_bounty/{bounty_id}';" align="left" href="/rest/rendered_bounty/{bounty_id}">
+<div class="card col-lg-4 col-sm-6 bounty-item mx-1 mb-2" onclick="location.href='/rest/rendered_bounty/{bounty_id}';" align="left" href="/rest/rendered_bounty/{bounty_id}">
   <a class="bounty-link" href="/rest/rendered_bounty/{bounty_id}" target="_top"><img class="card-img-top" src="{primary_image}" alt="{bounty_name} primary image"></a>
   <div class="card-body">
     <p class="card-reward">{bounty_reward}</p>
