--- a/hyperspace/html_templates/call_bounty_email.html
+++ b/hyperspace/html_templates/call_bounty_email.html
@@ -2,7 +2,7 @@
   <title>MakUrSpace Call Bounty "{bounty_name}"</title>
 </head>
 <body>
-  <img src="https://www.makurspace.com/MakUrSpace_Logo.png" height="300"><br>
+  <img src="https://www.bountyboard.makurspace.com/MakUrSpace_Logo.png" height="300"><br>
   You ({maker_name} @@ {maker_email}) are agreeing to complete this bounty:
   <h3>Bounty: {bounty_reward}</h3>
   <h3>Name: {bounty_name}</h3>
@@ -12,5 +12,5 @@
 
   <br><br>
 
-  <h2>To start this bounty <a href="https://www.makurspace.com/rest/call_bounty_confirm/{call_confirmation_id}">please click here</a></h2>
+  <h2>To start this bounty <a href="https://www.bountyboard.makurspace.com/rest/call_bounty_confirm/{call_confirmation_id}">please click here</a></h2>
 </body>
