--- a/hyperspace/html_templates/claim_bounty_email.html
+++ b/hyperspace/html_templates/claim_bounty_email.html
@@ -2,7 +2,7 @@
   <title>MakUrSpace Claim Bounty "{bounty_name}"</title>
 </head>
 <body>
-  <img src="https://www.makurspace.com/MakUrSpace_Logo.png" height="300"><br>
+  <img src="https://www.bountyboard.makurspace.com/MakUrSpace_Logo.png" height="300"><br>
   Here's the result for {bounty_name}:<br>
 
   <h3>Product Images: {product_images}</h3>
@@ -10,5 +10,5 @@
 
   <br><br>
 
-  <h2>To approve this bounty claim <a href="https://www.makurspace.com/rest/claim_bounty_confirm/{claim_confirmation_id}">please click here</a></h2>
+  <h2>To approve this bounty claim <a href="https://www.bountyboard.makurspace.com/rest/claim_bounty_confirm/{claim_confirmation_id}">please click here</a></h2>
 </body>
