--- a/hyperspace/html_templates/maker_registration_response_email_template.html
+++ b/hyperspace/html_templates/maker_registration_response_email_template.html
@@ -2,12 +2,12 @@
   <title>MakUrSpace Maker Registration</title>
 </head>
 <body>
-  <img src="https://www.makurspace.com/MakUrSpace_Logo.png" height="300"><br>
+  <img src="https://www.bountyboard.makurspace.com/MakUrSpace_Logo.png" height="300"><br>
   Hello {maker_name},
 
   You have registered as a maker on the MakUrSpace bounty platform. We're very excited to help you utilize your abilities to help others in their pursuits.
 
   <br><br>
 
-  <h2>To confirm your registration, <a href="https://www.makurspace.com/rest/maker_registration/{maker_id}">please click here</a></h2>
+  <h2>To confirm your registration, <a href="https://www.bountyboard.makurspace.com/rest/maker_registration/{maker_id}">please click here</a></h2>
 </body>
