--- a/hyperspace/html_templates/ask_benefactor_answer_email.html
+++ b/hyperspace/html_templates/ask_benefactor_answer_email.html
@@ -2,7 +2,7 @@
   <title>MakUrSpace: a question for you!</title>
 </head>
 <body>
-  <img src="https://www.makurspace.com/MakUrSpace_Logo.png" height="300"><br>
+  <img src="https://www.bountyboard.makurspace.com/MakUrSpace_Logo.png" height="300"><br>
   We received the answer to your question on "{bounty_name}"!
 
   <h3>{question_title}</h3>
@@ -14,5 +14,5 @@
 
   <br><br>
 
-  <h2>To view this bounty <a href="https://www.makurspace.com/rest/rendered_bounty/{bounty_id}">please click here</a></h2>
+  <h2>To view this bounty <a href="https://www.bountyboard.makurspace.com/rest/rendered_bounty/{bounty_id}">please click here</a></h2>
 </body>
