--- a/hyperspace/html_templates/bounty_creation_email_template.html
+++ b/hyperspace/html_templates/bounty_creation_email_template.html
@@ -2,7 +2,7 @@
   <title>MakUrSpace Bounty Submission</title>
 </head>
 <body>
-  <img src="https://www.makurspace.com/MakUrSpace_Logo.png" height="300"><br>
+  <img src="https://www.bountyboard.makurspace.com/MakUrSpace_Logo.png" height="300"><br>
   You submitted this bounty:
   <h3>Bounty: {BountyReward}</h3>
   <h3>Bounty Name: {Name}</h3>
@@ -14,5 +14,5 @@
 
   <br><br>
 
-  <h2>To confirm this bounty submission, <a href="https://www.makurspace.com/rest/bounty_confirmation/{bounty_confirmation_id}">please click here</a></h2>
+  <h2>To confirm this bounty submission, <a href="https://www.bountyboard.makurspace.com/rest/bounty_confirmation/{bounty_confirmation_id}">please click here</a></h2>
 </body>
